Showing data from model

--- a/app/templates/events.hbs
+++ b/app/templates/events.hbs
@@ -1,6 +1,6 @@
 <ul class="events">
-{{#each model}}
-	{{event-card name=name}}
+{{#each model as |info|}}
+	{{event-card info=info}}
 {{else}}
   <li>No events found</li>
 {{/each}}
