--- a/app/templates/components/site-head.hbs
+++ b/app/templates/components/site-head.hbs
@@ -1,4 +1,4 @@
 <ul class="site-head">
-	<li class="active">Headlines</li>
-	<li>All</li>
+	<li id="headlineEvents" {{action "changeEventsModel"}} >Headlines</li>
+	<li id="events" class="active">All</li>
 </ul>
