--- a/app/templates/components/site-head.hbs
+++ b/app/templates/components/site-head.hbs
@@ -1,4 +1,4 @@
 <ul class="site-head">
-	<li id="headlineEvents" {{action "changeEventsModel"}} >Headlines</li>
-	<li id="events" class="active">All</li>
+	<li id="headlineEvents" {{action "changeEventsModel" "headlineEvents"}} class="{{headlineEventsClasses}}">Headlines</li>
+	<li id="events" {{action "changeEventsModel" "events"}} class="{{eventsClasses}}">All</li>
 </ul>
