--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -41,7 +41,6 @@ ul {
 }
 
 .event-card {
-    background-image: url('http://thenextweb.com/wp-content/blogs.dir/1/files/2013/11/concert-audience.jpg');
     background-size: cover;
     height: 200px;
     width: 100%;
@@ -54,23 +53,16 @@ ul {
         left: 0;
         padding: 20px;
         position: absolute;
+        
         li {
-            border-right: solid 1px #B7B2AE;
             color: #B7B2AE;
             display: inline-block;
-            padding: 0 10px;
-        }
-
-        li:first-child {
-            padding-left: 0;
-        }
-        li:last-child {
-            border-right: none;
         }
 
         > h2 {
-            font-size: 0.825rem;
-            font-weight: bold;
+            font-size: 24px;
+            font-weight: 300;
+            margin: 0px;
         }
 
     }
@@ -92,7 +84,7 @@ ul {
 
     .event-info {
         background: white;
-        margin: 2px 9px 2px 50px;
+        margin: 3px 9px 3px 50px;
         padding: 5px;
         font-size: 14px;
         h3 {
