--- a/app/templates/components/event-card-sm.hbs
+++ b/app/templates/components/event-card-sm.hbs
@@ -4,7 +4,7 @@
 
 		<ul>
 			<li>{{info.date}}</li>
-			<li>{{time-format info.startTime 'hh:mma'}} - {{time-format info.endTime 'hh:mma'}}</li>
+			<li>{{time-format info.startTime 'h:mma'}} - {{time-format info.endTime 'h:mma'}}</li>
 			<li>{{info.location}}</li>
 		</ul>
 
