--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -42,6 +42,7 @@ ul {
 
 .event-card {
     background-size: cover;
+	box-sizing: border-box;
     height: 200px;
     width: 100%;
     padding: 20px;
@@ -80,6 +81,7 @@ ul {
 
     }
 }
+
 .times {
     .start-time {
         color: #D83942;
@@ -104,8 +106,22 @@ ul {
             color: #16ABC1;
             font-size: 14px;
             font-weight: 700;
-            margin: 0px;
+            margin: 0;
         }
     }
 }
 
+.star {
+	background-color: rgba(255,255,255,0.7);
+	border-radius: 100%;
+	display: block;
+	height: 20px;
+	position: absolute;
+	right: 25px;
+	top: 25px;
+	width: 20px;
+
+	.active {
+		background-color: yellow;
+	}
+}
