--- a/app/templates/components/site-head.hbs
+++ b/app/templates/components/site-head.hbs
@@ -1,4 +1,4 @@
-<ul class="site-head">
-	<li id="headlineEvents" {{action "changeEventsModel" "headlineEvents"}} class="{{headlineEventsClasses}}">Featured</li>
-	<li id="events" {{action "changeEventsModel" "events"}} class="{{eventsClasses}}">All</li>
-</ul>
+<div class="site-head">
+	{{#link-to 'events-featured'}}Featured{{/link-to}}
+	{{#link-to 'events'}}All{{/link-to}}
+</div>
