Updated colors for community connect

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -60,8 +60,8 @@ ul {
         font-weight: 300;
         margin: 0px;
         &.active {
-            color: #25ABBF;
-            border-bottom: solid 2px #25ABBF;
+            color: #002d55;
+            border-bottom: solid 2px #002d55;
             font-weight: 700;
         }
     }
@@ -136,7 +136,7 @@ ul {
     position: relative;
 
     .start-time {
-        color: #D83942;
+        color: #f2622f;
         font-size: 13px;
         font-weight: 200;
         display: inline;
@@ -187,7 +187,7 @@ ul {
         color: #999999;
         font-weight: 200;
         h3 {
-            color: #16ABC1;
+            color: #002d55;
             font-size: 14px;
             font-weight: 700;
             margin: 0;
