Added latest events list

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -192,6 +192,7 @@ ul {
             font-size: 14px;
             font-weight: 700;
             margin: 0;
+            padding-right: 45px;
         }
     }
     .star {
