--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -115,7 +115,7 @@ ul {
     }
 
     .star {
-        background: url('/assets/img/gray-star-headliner.png');
+        background-image: url('/assets/img/gray-star-headliner.png');
         background-size: 30px 30px;
         display: block;
         height: 30px;
@@ -198,7 +198,7 @@ ul {
     .star {
         display: block;
         position: absolute;
-        background: url('/assets/img/gray-star-list.png');
+        background-image: url('/assets/img/gray-star-list.png');
         background-size: 20px 20px;
         height: 20px;
         width: 20px;
