Trying to get star to work on android 4.x < 4.4

--- a/app/templates/components/star-fav.hbs
+++ b/app/templates/components/star-fav.hbs
@@ -1,1 +1,1 @@
-<span {{action 'toggleStar'}} {{bind-attr class=':star event.favorite:active'}}></span>
+<span {{action 'toggleStar'}} class='star {{if event.favorite 'active'}}'></span>
